--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,16 @@ main:
   branch: main
 etl:
   prep:
-    file_path: data/raw/train.csv
+    arguments:
+      csv_file_path:
+        help: Path to the CSV file
+        default: data/raw/train.csv
+      save_file:
+        help: Name to save the cleaned data
+        default: house_data
+      subset:
+        help: Wether to subset the data with the given config file
+        default: true
     variables:
       - Id
       - CurrentAge
@@ -45,17 +54,39 @@ etl:
           value: ['RL', 'RM', 'RP', 'RH']
     save_path: data/clean/
   train:
-    file_path: data/clean/house_data.csv
+    arguments:
+      csv_file_path:
+        help: Path to the CSV file
+        default: data/clean/house_data.csv
+      test_size:
+        help: Proportion of the dataset to include in the test split
+        default: 0.2
+      name_model:
+        help: Name to save the model
+        default: charmander
+      evaluate:
+        help: Wether to evaluate the model
+        default: true
     target_variable: SalePrice
-    test_size: 0.2
     stratify:
       - MSZoning
     seed: 42
   inference:
-    save_path: data/predictions/
+    arguments:
+      csv_file_path:
+        help: Path to the CSV file
+        default: data/clean/house_data.csv
+      model_path:
+        help: Path to the model
+        default: models/catboost_demo/
+      evaluate:
+        help: Wether to evaluate the model
+        default: true
+      save_file:
+        help: Name to save the predictions
+        default: predictions
 model:
   algorithm: catboost
-  name: charmander
   variables:
     categorical:
       - MSZoning
@@ -70,7 +101,7 @@ model:
     learning_rate: 0.05
     loss_function: RMSE
     verbose: False
-    random_seed: 8
+    random_seed: 42
     monotone_constraints:
       GrLivArea: 1
       OverallQual: 1
